# news-reader

./: .gitignore  BUILD.bazel  LICENSE  NewsReader.sln  README.md  WORKSPACE  package.json
News.API/: BUILD.bazel  News.API.csproj  Program.cs  Startup.cs  index.html
News.API/Controllers/: IndexController.cs  NewsController.cs
News.API/Model/: BUILD.bazel  NewsStory.cs  Rss.cs  RssChannel.cs  RssItem.cs
News.API/Properties/: launchSettings.json
News.API/Services/: BUILD.bazel  NewsService.cs
client/: App.svelte  BUILD.bazel  closure-config.json  externs.js  main.js
client/router/: BUILD.bazel
client/routes/add-source/: AddSource.svelte  BUILD.bazel
client/routes/home/: BUILD.bazel  Home.svelte  news-service.js  story.js
client/routes/shared/: BUILD.bazel  add-source-service.js
