package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_library")

core_library(
    name = "Model.dll",
    srcs = [
        "Rss.cs",
        "RssChannel.cs",
        "RssItem.cs",
        "NewsStory.cs"       
    ],
    deps = [
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:libraryset",
    ]
)